--- a/leanpkg.toml
+++ b/leanpkg.toml
@@ -1,7 +1,7 @@
 [package]
 name = "super"
 version = "0.1"
-lean_version = "3.4.2"
+lean_version = "leanprover-community/lean:3.50.3"
 path = "src"
 
 [dependencies]
